# job_tracker

./: .gitignore  README.md  gmail_sender.py  main.py  prompts.py  pyproject.toml  run_job_tracker.sh  utils.py
