[project]
name = "job-tracker"
version = "0.1.0"
description = "An automated job search assistant"
requires-python = ">=3.8"

dependencies = [
    "langchain-core",
    "langchain-openai", 
    "langchain-community",
    "langgraph",
    "playwright",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "python-dotenv",
]
